--- a/CSS/Regolamento.css
+++ b/CSS/Regolamento.css
@@ -5,7 +5,7 @@ body {
     display: block;
     flex-direction: column;
     min-height: 100vh;
-    background-image: url('Sfondo/Sfondo.png');
+    background-image: url('../Immagini/Sfondi/Regolamento.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover; 
