--- a/CSS/Riconoscimenti.css
+++ b/CSS/Riconoscimenti.css
@@ -1,16 +1,15 @@
 body { 
     font-family: 'Montserrat', sans-serif; 
-    font-size: 22px; 
     margin: 0;
-    display: block;
+    display: flex;
     flex-direction: column;
-    min-height: 350vh;
+    min-height: 100vh; 
     background-image: url('../Immagini/Sfondi/Onorificenze.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover; 
-    overflow-y: scroll;
     background-position: center center;
+    overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
@@ -147,6 +146,7 @@ body::-webkit-scrollbar {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
     text-align: center;
     padding: 15px;
     width: clamp(220px, 30vw, 500px);
@@ -155,6 +155,7 @@ body::-webkit-scrollbar {
 }
 
 .skin-img {
+    order: 2;
     display: block;
     margin: 0 auto;
     filter: drop-shadow(0 10px 20px rgba(0,0,0,0.5));
@@ -168,7 +169,9 @@ body::-webkit-scrollbar {
     transition: all 0.3s ease;
 }
 
+
 .skin-card p {
+    order: 1;
     margin: 0 0 15px 0;
     font-weight: bold;
     color: #ffffff;
