--- a/CSS/globale.css
+++ b/CSS/globale.css
@@ -187,13 +187,13 @@ body.page-leaving .theme-switcher button img {
 
 .main-nav-desktop a
 {
-    font-size: 1rem;
-    text-decoration: none;
-    padding: 10px 10px;
+    font-size: 1rem; 
+    font-weight: 1000; 
+    padding: 15px 20px; 
+    text-decoration: none; 
     display: inline-flex; 
     align-items: center; 
     position: relative;
-    font-weight: bold;
     transition: color 0.3s;
 }
 
