--- a/CSS/Aziende.css
+++ b/CSS/Aziende.css
@@ -50,10 +50,6 @@ body {
 }
 /* SFONDO */
 
-/* =================================================================
-   SEZIONE 1: STILI GLOBALI E DEFAULT (Dark Mode come base)
-   ================================================================= */
-
 .monthly-report-table th,
 .monthly-report-table td {
     padding: 18px 5px;
@@ -64,7 +60,6 @@ body {
 }
 
 .monthly-report-table thead {
-    /* DEFAULT/DARK MODE */
     background: linear-gradient(180deg, #2b2b2b 0%, #1c1c1c 100%);
     color: #d3172d;
 }
@@ -90,22 +85,20 @@ body {
 
 
 .monthly-report-table tbody tr:nth-child(even) {
-    /* DEFAULT/DARK MODE */
     background-color: #222222; 
 }
 .monthly-report-table tbody tr:nth-child(odd) {
-    /* DEFAULT/DARK MODE */
     background-color: #2c2c2c; 
 }
 
 .monthly-report-table .data-value {
-    /* DEFAULT/DARK MODE */
     color: #ffffff;
     font-size: 1.3em;
     font-weight: 800; 
     border-top: 1px solid rgba(255, 255, 255, 0.08); 
     border-right: 1px solid rgba(255, 255, 255, 0.05); 
-    transition: all 0.3s ease; /* MODIFICATO: 0.3s */
+    transition: all 0.3s ease;
+    padding: 35px;
 }
 
 .monthly-report-table .data-value:last-child {
@@ -113,7 +106,6 @@ body {
 }
 
 .monthly-report-table .data-value:hover {
-    /* DEFAULT/DARK MODE */
     background-color: #383838;
     box-shadow: inset 0 0 15px rgba(255, 0, 0, 0.2);
     color: #d3172d;
