--- a/CSS/Bacheca.css
+++ b/CSS/Bacheca.css
@@ -382,9 +382,10 @@ body {
     border-radius: 8px;
     box-shadow: 0 4px 15px rgba(0,0,0,0.4);
     overflow: hidden;
-    display: flex;ile */
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
+    text-align: center; 
     transition: transform 0.3s ease-in-out, box-shadow 0.3s;
     border: 1px solid #333; 
 }
