--- a/CSS/Gerarchia.css
+++ b/CSS/Gerarchia.css
@@ -12,6 +12,12 @@ body {
     color: #000;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+  width: 0;
+  height: 0;
+}
+
 :root {
     --line-color: #ffffff;
     --line-thickness: 3px;
@@ -26,6 +32,7 @@ body {
     align-items: center; 
     padding: 20px;
     width: 100%;
+    min-height: 100%;
     box-sizing: border-box;
 }
 
